--- a/C4_Intro_to_Python.ipynb
+++ b/C4_Intro_to_Python.ipynb
@@ -20,7 +20,7 @@
       },
       "source": [
         "# Clone the entire repo.\n",
-        "!git clone -l -s https://github.com/cagBRT/Intro-to-Programming-with-Python.git cloned-repo\n",
+        "!git clone -l -s https://github.com/Balaji-github007/Intro-to-Programming-with-Python.git cloned-repo\n",
         "%cd cloned-repo\n",
         "!ls"
       ],
@@ -772,9 +772,9 @@
         "\n",
         "Select:  GITHUB<br>\n",
         "\n",
-        "On the search bar type in: **cagBRT**  This will bring up my gitHub repository. <br>\n",
+        "On the search bar type in: **Balaji-github007**  This will bring up my gitHub repository. <br>\n",
         "\n",
-        "On the drop down menu select: cagBRT/<br>**Intro-To-Programming-with-Python**<br>\n",
+        "On the drop down menu select: Balaji-github007/<br>**Intro-To-Programming-with-Python**<br>\n",
         "\n",
         "Then select: **Intro to C5 Intro to Python.ipynb**<br>"
       ]
